--- a/graph_definitions.ini
+++ b/graph_definitions.ini
@@ -13,38 +13,47 @@ render_mode="svg"
 
 [FIG_CASES_MEAN_3]
 x = date
-y = ["cases (mean of ±3 days)",
-     "cases",
-     "cases (Nowcast RKI)",
-     "cases (mean of ±3 days of Nowcast RKI)",
-     "Infections (based on 7 day nowcast of RKI - 5 days regarding incubation period)",
-     "Infections (mean of ±3 days based on 7 day nowcast of RKI - 5 days regarding incubation period)"]
+y = ["cases",
+     "cases (mean of ±3 days)"]
 color_discrete_map = {"cases (mean of ±3 days)": "rgb(0,0,255)",
-                      "cases": "rgba(0,0,255,0.15)",
-                      "cases (Nowcast RKI)": "rgba(0,204,0,0.3)",
-                      "cases (mean of ±3 days of Nowcast RKI)": "rgb(0,204,0)",
-                      "Infections (based on 7 day nowcast of RKI - 5 days regarding incubation period)": "rgba(255,165,0,0.3)",
-                      "Infections (mean of ±3 days based on 7 day nowcast of RKI - 5 days regarding incubation period)": "rgb(255,165,0)"}
+                      "cases": "rgba(0,0,255,0.15)"}
 labels = {"dateRep": "reporting date"}
 title = New Corona cases
 xaxis_title = Date
 yaxis_title = Number of cases
+yaxis_tickformat = ,f
+hover_data = RKI reporting date
+
+
+[FIG_CASES_MEAN_3_SUBFIG]
+y = ["cases (Nowcast RKI)",
+     "cases (mean of ±3 days of Nowcast RKI)",
+     "Infections (based on 7 day nowcast of RKI - 5 days regarding incubation period)",
+     "Infections (mean of ±3 days based on 7 day nowcast of RKI - 5 days regarding incubation period)"]
+color_discrete_map = {"cases (Nowcast RKI)": "rgba(0,204,0,0.3)",
+                      "cases (mean of ±3 days of Nowcast RKI)": "rgb(0,204,0)",
+                      "Infections (based on 7 day nowcast of RKI - 5 days regarding incubation period)": "rgba(255,165,0,0.3)",
+                      "Infections (mean of ±3 days based on 7 day nowcast of RKI - 5 days regarding incubation period)": "rgb(255,165,0)"}
 
 
 [FIG_DEATHS_MEAN_3]
 x = date
-y = ["deaths (mean of ±3 days)", 
-	 "deaths",
-     "deaths (mean of ±3 days) by reference date (start of illness, alternatively reporting date)",
-     "deaths by reference date (start of illness, alternatively reporting date)"
-    ]
+y = ["deaths (mean of ±3 days)",
+	 "deaths"]
 color_discrete_map = {"deaths (mean of ±3 days)": "rgb(255,0,0)",
-                      "deaths": "rgba(255,0,0,0.15)",
-                      "deaths (mean of ±3 days) by reference date (start of illness, alternatively reporting date)": "rgb(0,204,0)",
-                      "deaths by reference date (start of illness, alternatively reporting date)": "rgba(0,204,0,0.3)"}
+                      "deaths": "rgba(255,0,0,0.15)"}
 title = Corona deaths<br>(***note: numbers for deaths by reference date may still rise sharply in the final weeks, as the outcome is not yet clear***)
 xaxis_title = Date
 yaxis_title = Number of deaths
+yaxis_tickformat = ,f
+hover_data = RKI reporting date
+
+
+[FIG_DEATHS_MEAN_3_SUBFIG]
+y = ["deaths (mean of ±3 days) by reference date (start of illness, alternatively reporting date)",
+     "deaths by reference date (start of illness, alternatively reporting date)"]
+color_discrete_map = {"deaths (mean of ±3 days) by reference date (start of illness, alternatively reporting date)": "rgb(0,204,0)",
+                      "deaths by reference date (start of illness, alternatively reporting date)": "rgba(0,204,0,0.3)"}
 
 
 [FIG_R0]
@@ -60,6 +69,7 @@ color_discrete_map = {"R0 by cases (mean of ±3 days)": "rgb(0,0,255)",
 title = R0 and daily proportional change
 xaxis_title = Date
 yaxis_title = value
+yaxis_tickformat = .2f
 shapes = [{"type": 'line',
 		   "y0": 1,
 		   "y1": 1,
@@ -81,6 +91,7 @@ color_discrete_map = {"7 day incidence per 100,000 inhabitants": "rgba(0,0,255,0
 title = 7 day incidence
 xaxis_title = Date
 yaxis_title = value
+yaxis_tickformat = ,.2f
 
 
 [FIG_PCR_TESTS]
@@ -92,6 +103,15 @@ color_discrete_map = {"positive tested": "rgb(255,0,0)",
 title = Number of PCR-Tests
 xaxis_title = calendar week
 yaxis_title = number of tests
+barmode = stack
+yaxis_tickformat = ,f
+
+
+[SUBFIG_PCR_TESTS_POSITIVE_RATE]
+y = ["positive rate (%)"]
+color_discrete_map = {"positive rate (%)": "rgb(255,0,0)"}
+yaxis_title = positive rate (%)
+yaxis_tickformat = .2f
 
 
 [FIG_DISTRIBUTION_OF_INHABITANTS]
@@ -101,6 +121,7 @@ color_discrete_map = {"inhabitants": "rgb(0,204,0)"}
 title = Distribution of inhabitants and reported deaths<br>(***note: different scales for inhabitants and deaths***)
 xaxis_title = age group
 yaxis_title = number of people
+yaxis_tickformat = ,f
 
 
 [SUBFIG_DISTRIBUTION_OF_DEATHS]
@@ -108,12 +129,15 @@ y = ["total reported deaths"]
 color_discrete_map = {"total reported deaths": "rgb(255,0,0)"}
 yaxis_title = number of reported deaths
 barmode = group
+yaxis_tickformat = ,f
+
 
 [SUBFIG_DISTRIBUTION_OF_CASES]
 y = ["total reported cases"]
 color_discrete_map = {"total reported cases": "rgb(0,0,255)"}
 yaxis_title = number of reported cases
 barmode = group
+yaxis_tickformat = ,f
 
 
 [FIG_DISTRIBUTION_OF_CASES_PER_N_INHABITANTS]
@@ -123,12 +147,15 @@ color_discrete_map = {"total reported cases per 100,000 inhabitants": "rgb(0,0,2
 title = Distribution of reported cases and deaths in relation to inhabitants<br>(***note: different scales for cases and deaths***)
 xaxis_title = age group
 yaxis_title = number of reported cases
+yaxis_tickformat = ,.2f
+
 
 [SUBFIG_DISTRIBUTION_OF_DEATHS_PER_N_INHABITANTS]
 y = ["total reported deaths per 1,000,000 inhabitants"]
 color_discrete_map = {"total reported deaths per 1,000,000 inhabitants": "rgb(255,0,0)"}
 yaxis_title = number of reported deaths
 barmode = group
+yaxis_tickformat = ,.2f
 
 
 [FIG_INTENSIVE_NEW]
@@ -144,6 +171,7 @@ color_discrete_map = {"newly admitted intensive care patients with a positive CO
 title = New admissions of COVID-19 patients to intensive care unit since the day before
 xaxis_title = date
 yaxis_title = cases
+yaxis_tickformat = ,f
 
 
 [FIG_INTENSIVE_DAILY_CHANGE]
@@ -155,6 +183,7 @@ color_discrete_map = {"intensive care patients with positive COVID-19 test (chan
 title = Change from previous day of intensiv care beds occupied by COVID-19 patients
 xaxis_title = date
 yaxis_title = cases
+yaxis_tickformat = ,f
 
 
 [FIG_INTENSIVE_REPORTING_AREAS]
@@ -164,6 +193,7 @@ color_discrete_map = {"number of reporting areas": "rgb(0,0,255)"}
 title = Number of reporting areas
 xaxis_title = date
 yaxis_title = value
+yaxis_tickformat = ,f
 
 
 [FIG_INTENSIVE_CARE_VENTILATED]
@@ -175,6 +205,7 @@ color_discrete_map = {"not invasively ventilated": "rgb(0,0,255)",
 title = Proportion of COVID-19 patients receiving intensive care and ventilation
 xaxis_title = date
 yaxis_title = cases
+yaxis_tickformat = ,f
 
 
 [SUBFIG_INTENSIVE_CARE_VENTILATED_PERCENTAGE]
@@ -182,6 +213,7 @@ y = ["invasively ventilated (%)"]
 color_discrete_map = {"invasively ventilated (%)": "rgb(255,0,0)"}
 yaxis_title = ventilated in %
 barmode = stack
+yaxis_tickformat = .2f
 
 
 [FIG_INTENSIVE_BEDS]
@@ -197,6 +229,7 @@ color_discrete_map = {"COVID-19 cases": "rgba(178,45,0,0.5)",
 title = Intensive care beds occupied with and without COVID-19 patients
 xaxis_title = date
 yaxis_title = cases
+yaxis_tickformat = ,f
 
 
 [FIG_INTENSIVE_BEDS_COUNT]
@@ -207,6 +240,7 @@ color_discrete_map = {"number of intensive care beds": "rgba(0,153,51,0.5)",
                       "number of intensive care beds incl. emergency reserve": "rgb(255,153,0)",
                       "number of occupied intensive care beds (mean ±3 days)": "rgba(0,0,153,0.5)"}
 barmode = stack
+yaxis_tickformat = ,f
 
 
 [FIG_INTENSIVE_BEDS_PROP]
@@ -225,9 +259,10 @@ title = Intensiv care beds proportional
 xaxis_title = date
 yaxis_title = percent
 yaxis = {"range": [0, 100]}
+yaxis_tickformat = .2f
 
 
-[FIG_PROPORTIONS_CASES_HOSPITALIZATIONS_DEATHS]
+[FIG_CLINICAL_ASPECTS]
 x = calendar week
 y = ["deceased in %",
 	 "hospitalized in %",
@@ -238,6 +273,7 @@ color_discrete_map = {"deceased in %": "red",
 title = Proportion in relation to reported cases
 xaxis_title = calendar week
 yaxis_title = percentage
+yaxis_tickformat = .2f
 
 
 [FIG_NEW_DEATHS_PER_REFDATE]
@@ -249,6 +285,8 @@ color_discrete_map = {"new reported deaths with known start of illness": "rgb(25
 title = new reported deaths per reference date (start of illness, alternatively reporting date)
 xaxis_title = reference date (start of illness, alternatively reporting date)
 yaxis_title = new reported deaths
+barmode = stack
+yaxis_tickformat = ,f
 
 
 [FIG_TOTAL_CASES_PER_REFDATE]
@@ -260,6 +298,8 @@ color_discrete_map = {"cases with reported start of illness": "rgb(0,0,153)",
 title = total reported cases per reference date (start of illness, alternatively reporting date)
 xaxis_title = reference date (start of illness, alternatively reporting date)
 yaxis_title = reported cases
+barmode = stack
+yaxis_tickformat = ,f
 
 
 [FIG_NEW_CASES_BY_REPORTING_DATE]
@@ -269,6 +309,8 @@ color_discrete_map = {"new reported cases by reporting date": "rgb(0,0,255)"}
 title = Delay in reporting between public health departments and the RKI
 xaxis_title = reporting date
 yaxis_title = new reported cases
+barmode = stack
+yaxis_tickformat = ,f
 
 
 [FIG_TOTAL_DEATHS_PER_REFDATE]
@@ -280,3 +322,5 @@ color_discrete_map = {"deaths with reported start of illness": "rgb(255,0,0)",
 title = total reported cases per reference date (start of illness, alternatively reporting date)<br>(***note: numbers for deaths by reference date may still rise sharply in the final weeks, as the outcome is not yet clear***
 xaxis_title = reference date (start of illness, alternatively reporting date)
 yaxis_title = reported cases
+barmode = stack
+yaxis_tickformat = ,f
