Ordered FIG configs in order of appearance

--- a/graph_definitions.ini
+++ b/graph_definitions.ini
@@ -10,6 +10,35 @@ legend = {"xanchor": "left",
           }
 render_mode="svg"
 
+# --------- Overview
+
+
+[FIG_NEW_DEATHS_PER_REFDATE]
+x = date
+y = ["new reported deaths with known start of illness",
+     "new reported deaths with unknown start of illness (reporting date)"]
+color_discrete_map = {"new reported deaths with known start of illness": "rgb(255,0,0)",
+                      "new reported deaths with unknown start of illness (reporting date)": "rgb(255,153,0)"}
+title = new reported deaths per reference date (start of illness, alternatively reporting date)
+xaxis_title = reference date (start of illness, alternatively reporting date)
+yaxis_title = new reported deaths
+barmode = stack
+yaxis_tickformat = ,f
+
+
+[FIG_NEW_CASES_BY_REPORTING_DATE]
+x = date
+y = ["new reported cases by reporting date"]
+color_discrete_map = {"new reported cases by reporting date": "rgb(0,0,255)"}
+title = Delay in reporting between public health departments and the RKI
+xaxis_title = reporting date
+yaxis_title = new reported cases
+barmode = stack
+yaxis_tickformat = ,f
+
+
+# --------- Corona Cases
+
 
 [FIG_CASES_MEAN_3]
 x = date
@@ -36,6 +65,19 @@ color_discrete_map = {"cases (Nowcast RKI)": "rgba(0,204,0,0.3)",
                       "Infections (mean of ±3 days based on 7 day nowcast of RKI - 5 days regarding incubation period)": "rgb(255,165,0)"}
 
 
+[FIG_TOTAL_CASES_PER_REFDATE]
+x = date
+y = ["cases with reported start of illness",
+     "cases with unknown start of illness (reporting date)"]
+color_discrete_map = {"cases with reported start of illness": "rgb(0,0,153)",
+                      "cases with unknown start of illness (reporting date)": "rgb(79,148,205)"}
+title = total reported cases per reference date (start of illness, alternatively reporting date)
+xaxis_title = reference date (start of illness, alternatively reporting date)
+yaxis_title = reported cases
+barmode = stack
+yaxis_tickformat = ,f
+
+
 [FIG_DEATHS_MEAN_3]
 x = date
 y = ["deaths (mean of ±3 days)",
@@ -54,6 +96,19 @@ y = ["deaths (mean of ±3 days) by reference date (start of illness, alternative
      "deaths by reference date (start of illness, alternatively reporting date)"]
 color_discrete_map = {"deaths (mean of ±3 days) by reference date (start of illness, alternatively reporting date)": "rgb(0,204,0)",
                       "deaths by reference date (start of illness, alternatively reporting date)": "rgba(0,204,0,0.3)"}
+
+
+[FIG_TOTAL_DEATHS_PER_REFDATE]
+x = date
+y = ["deaths with reported start of illness",
+     "deaths with unknown start of illness (reporting date)"]
+color_discrete_map = {"deaths with reported start of illness": "rgb(255,0,0)",
+                      "deaths with unknown start of illness (reporting date)": "rgb(255,153,0)"}
+title = total reported cases per reference date (start of illness, alternatively reporting date)<br>(***note: numbers for deaths by reference date may still rise sharply in the final weeks, as the outcome is not yet clear***
+xaxis_title = reference date (start of illness, alternatively reporting date)
+yaxis_title = reported cases
+barmode = stack
+yaxis_tickformat = ,f
 
 
 [FIG_R0]
@@ -114,6 +169,20 @@ yaxis_title = positive rate (%)
 yaxis_tickformat = .2f
 
 
+[FIG_CLINICAL_ASPECTS]
+x = calendar week
+y = ["deceased in %",
+	 "hospitalized in %",
+	 "no symptoms or no symptoms significant for COVID-19 in %"]
+color_discrete_map = {"deceased in %": "red",
+                      "hospitalized in %": "orange",
+                      "no symptoms or no symptoms significant for COVID-19 in %": "green"}
+title = Proportion in relation to reported cases
+xaxis_title = calendar week
+yaxis_title = percentage
+yaxis_tickformat = .2f
+
+
 [FIG_DISTRIBUTION_OF_INHABITANTS]
 x = age group
 y = ["inhabitants"]
@@ -128,14 +197,6 @@ yaxis_tickformat = ,f
 y = ["total reported deaths"]
 color_discrete_map = {"total reported deaths": "rgb(255,0,0)"}
 yaxis_title = number of reported deaths
-barmode = group
-yaxis_tickformat = ,f
-
-
-[SUBFIG_DISTRIBUTION_OF_CASES]
-y = ["total reported cases"]
-color_discrete_map = {"total reported cases": "rgb(0,0,255)"}
-yaxis_title = number of reported cases
 barmode = group
 yaxis_tickformat = ,f
 
@@ -156,6 +217,19 @@ color_discrete_map = {"total reported deaths per 1,000,000 inhabitants": "rgb(25
 yaxis_title = number of reported deaths
 barmode = group
 yaxis_tickformat = ,.2f
+
+
+# --------- Intensive Care
+
+
+[FIG_INTENSIVE_REPORTING_AREAS]
+x = date
+y = ["number of reporting areas"]
+color_discrete_map = {"number of reporting areas": "rgb(0,0,255)"}
+title = Number of reporting areas
+xaxis_title = date
+yaxis_title = value
+yaxis_tickformat = ,f
 
 
 [FIG_INTENSIVE_NEW]
@@ -183,16 +257,6 @@ color_discrete_map = {"intensive care patients with positive COVID-19 test (chan
 title = Change from previous day of intensiv care beds occupied by COVID-19 patients
 xaxis_title = date
 yaxis_title = cases
-yaxis_tickformat = ,f
-
-
-[FIG_INTENSIVE_REPORTING_AREAS]
-x = date
-y = ["number of reporting areas"]
-color_discrete_map = {"number of reporting areas": "rgb(0,0,255)"}
-title = Number of reporting areas
-xaxis_title = date
-yaxis_title = value
 yaxis_tickformat = ,f
 
 
@@ -262,65 +326,38 @@ yaxis = {"range": [0, 100]}
 yaxis_tickformat = .2f
 
 
-[FIG_CLINICAL_ASPECTS]
-x = calendar week
-y = ["deceased in %",
-	 "hospitalized in %",
-	 "no symptoms or no symptoms significant for COVID-19 in %"]
-color_discrete_map = {"deceased in %": "red",
-                      "hospitalized in %": "orange",
-                      "no symptoms or no symptoms significant for COVID-19 in %": "green"}
-title = Proportion in relation to reported cases
-xaxis_title = calendar week
-yaxis_title = percentage
-yaxis_tickformat = .2f
+# --- To order
 
 
-[FIG_NEW_DEATHS_PER_REFDATE]
-x = date
-y = ["new reported deaths with known start of illness",
-     "new reported deaths with unknown start of illness (reporting date)"]
-color_discrete_map = {"new reported deaths with known start of illness": "rgb(255,0,0)",
-                      "new reported deaths with unknown start of illness (reporting date)": "rgb(255,153,0)"}
-title = new reported deaths per reference date (start of illness, alternatively reporting date)
-xaxis_title = reference date (start of illness, alternatively reporting date)
-yaxis_title = new reported deaths
-barmode = stack
+[SUBFIG_DISTRIBUTION_OF_CASES]
+y = ["total reported cases"]
+color_discrete_map = {"total reported cases": "rgb(0,0,255)"}
+yaxis_title = number of reported cases
+barmode = group
 yaxis_tickformat = ,f
 
 
-[FIG_TOTAL_CASES_PER_REFDATE]
-x = date
-y = ["cases with reported start of illness",
-     "cases with unknown start of illness (reporting date)"]
-color_discrete_map = {"cases with reported start of illness": "rgb(0,0,153)",
-                      "cases with unknown start of illness (reporting date)": "rgb(79,148,205)"}
-title = total reported cases per reference date (start of illness, alternatively reporting date)
-xaxis_title = reference date (start of illness, alternatively reporting date)
-yaxis_title = reported cases
-barmode = stack
-yaxis_tickformat = ,f
 
 
-[FIG_NEW_CASES_BY_REPORTING_DATE]
-x = date
-y = ["new reported cases by reporting date"]
-color_discrete_map = {"new reported cases by reporting date": "rgb(0,0,255)"}
-title = Delay in reporting between public health departments and the RKI
-xaxis_title = reporting date
-yaxis_title = new reported cases
-barmode = stack
-yaxis_tickformat = ,f
 
 
-[FIG_TOTAL_DEATHS_PER_REFDATE]
-x = date
-y = ["deaths with reported start of illness",
-     "deaths with unknown start of illness (reporting date)"]
-color_discrete_map = {"deaths with reported start of illness": "rgb(255,0,0)",
-                      "deaths with unknown start of illness (reporting date)": "rgb(255,153,0)"}
-title = total reported cases per reference date (start of illness, alternatively reporting date)<br>(***note: numbers for deaths by reference date may still rise sharply in the final weeks, as the outcome is not yet clear***
-xaxis_title = reference date (start of illness, alternatively reporting date)
-yaxis_title = reported cases
-barmode = stack
-yaxis_tickformat = ,f
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
