refactor graph definitions

--- a/graph_definitions.ini
+++ b/graph_definitions.ini
@@ -125,11 +125,6 @@ title = R0 and daily proportional change
 xaxis_title = Date
 yaxis_title = value
 yaxis_tickformat = .2f
-shapes = [{"type": 'line',
-		   "y0": 1,
-		   "y1": 1,
-		   "x0": "2020-01-01",
-		   "x1": "2020-12-01"}]
 yaxis = {"range": [0, 2]}
 
 
@@ -235,13 +230,9 @@ yaxis_tickformat = ,f
 [FIG_INTENSIVE_NEW]
 x = date
 y = ["newly admitted intensive care patients with a positive COVID-19 test",
-     "newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)",
-     "calculated start of infection of newly admitted intensive care patients with a positive COVID-19 test",
-     "calculated start of infection of newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)"]
+     "newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)"]
 color_discrete_map = {"newly admitted intensive care patients with a positive COVID-19 test": "rgba(0,0,255,0.15)",
-                      "newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)": "rgb(0,0,255)",
-                      "calculated start of infection of newly admitted intensive care patients with a positive COVID-19 test": "rgba(255,153,0,0.15)",
-                      "calculated start of infection of newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)": "rgb(255,153,0)"}
+                      "newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)": "rgb(0,0,255)"}
 title = New admissions of COVID-19 patients to intensive care unit since the day before
 xaxis_title = date
 yaxis_title = cases
