--- a/graph_definitions.ini
+++ b/graph_definitions.ini
@@ -112,16 +112,16 @@ barmode = stack
 yaxis_tickformat = ,f
 
 
-[FIG_R0]
+[FIG_R_VALUE]
 x = date
-y = ["R0 by cases (mean of ±3 days)",
-     "7 day R0 (Nowcast RKI)",
-     "7 day R0 (Nowcast RKI, -5 days incubation period)",
+y = ["R value by cases (mean of ±3 days)",
+     "7 day R value (Nowcast RKI)",
+     "7 day R value (Nowcast RKI, -5 days incubation period)",
      "daily proportionate increase of cases (mean of ±3 days)"]
-color_discrete_map = {"R0 by cases (mean of ±3 days)": "rgb(0,0,255)",
+color_discrete_map = {"R value by cases (mean of ±3 days)": "rgb(0,0,255)",
                       "daily proportionate increase of cases (mean of ±3 days)": "rgba(0,0,255,0.15)",
-                      "7 day R0 (Nowcast RKI)": "rgb(0,204,0)",
-                      "7 day R0 (Nowcast RKI, -5 days incubation period)": "rgb(255,165,0)"}
+                      "7 day R value (Nowcast RKI)": "rgb(0,204,0)",
+                      "7 day R value (Nowcast RKI, -5 days incubation period)": "rgb(255,165,0)"}
 title = R value and daily proportional change
 xaxis_title = Date
 yaxis_title = Value
