Unify table axis across project

--- a/graph_definitions.ini
+++ b/graph_definitions.ini
@@ -20,9 +20,9 @@ y = ["new reported deaths with known start of illness",
      "new reported deaths with unknown start of illness (reporting date)"]
 color_discrete_map = {"new reported deaths with known start of illness": "rgb(255,0,0)",
                       "new reported deaths with unknown start of illness (reporting date)": "rgb(255,153,0)"}
-title = new reported deaths per reference date (start of illness, alternatively reporting date)
-xaxis_title = reference date (start of illness, alternatively reporting date)
-yaxis_title = new reported deaths
+title = New reported deaths per reference date (start of illness, alternatively reporting date)
+xaxis_title = Reference date (start of illness, alternatively reporting date)
+yaxis_title = New reported deaths
 barmode = stack
 yaxis_tickformat = ,f
 
@@ -32,8 +32,8 @@ x = date
 y = ["new reported cases by reporting date"]
 color_discrete_map = {"new reported cases by reporting date": "rgb(0,0,255)"}
 title = Delay in reporting between public health departments and the RKI
-xaxis_title = reporting date
-yaxis_title = new reported cases
+xaxis_title = Reporting date
+yaxis_title = New reported cases
 barmode = stack
 yaxis_tickformat = ,f
 
@@ -72,9 +72,9 @@ y = ["cases with reported start of illness",
      "cases with unknown start of illness (reporting date)"]
 color_discrete_map = {"cases with reported start of illness": "rgb(0,0,153)",
                       "cases with unknown start of illness (reporting date)": "rgb(79,148,205)"}
-title = total reported cases per reference date (start of illness, alternatively reporting date)
-xaxis_title = reference date (start of illness, alternatively reporting date)
-yaxis_title = reported cases
+title = Total reported cases per reference date (start of illness, alternatively reporting date)
+xaxis_title = Reference date (start of illness, alternatively reporting date)
+yaxis_title = Reported cases
 barmode = stack
 yaxis_tickformat = ,f
 
@@ -85,7 +85,7 @@ y = ["deaths (mean of ±3 days)",
 	 "deaths"]
 color_discrete_map = {"deaths (mean of ±3 days)": "rgb(255,0,0)",
                       "deaths": "rgba(255,0,0,0.15)"}
-title = Corona deaths<br>(***note: numbers for deaths by reference date may still rise sharply in the final weeks, as the outcome is not yet clear***)
+title = Corona deaths<br>(note: numbers for deaths by reference date may still rise sharply in the final weeks, as the outcome is not yet clear*)
 xaxis_title = Date
 yaxis_title = Number of deaths
 yaxis_tickformat = ,f
@@ -105,9 +105,9 @@ y = ["deaths with reported start of illness",
      "deaths with unknown start of illness (reporting date)"]
 color_discrete_map = {"deaths with reported start of illness": "rgb(255,0,0)",
                       "deaths with unknown start of illness (reporting date)": "rgb(255,153,0)"}
-title = total reported cases per reference date (start of illness, alternatively reporting date)<br>(***note: numbers for deaths by reference date may still rise sharply in the final weeks, as the outcome is not yet clear***
-xaxis_title = reference date (start of illness, alternatively reporting date)
-yaxis_title = reported cases
+title = Total reported cases per reference date (start of illness, alternatively reporting date)<br>(note: numbers for deaths by reference date may still rise sharply in the final weeks, as the outcome is not yet clear***
+xaxis_title = Reference date (start of illness, alternatively reporting date)
+yaxis_title = Reported cases
 barmode = stack
 yaxis_tickformat = ,f
 
@@ -122,9 +122,9 @@ color_discrete_map = {"R0 by cases (mean of ±3 days)": "rgb(0,0,255)",
                       "daily proportionate increase of cases (mean of ±3 days)": "rgba(0,0,255,0.15)",
                       "7 day R0 (Nowcast RKI)": "rgb(0,204,0)",
                       "7 day R0 (Nowcast RKI, -5 days incubation period)": "rgb(255,165,0)"}
-title = R0 and daily proportional change
+title = R value and daily proportional change
 xaxis_title = Date
-yaxis_title = value
+yaxis_title = Value
 yaxis_tickformat = .2f
 yaxis = {"range": [0, 2]}
 
@@ -141,7 +141,7 @@ color_discrete_map = {"7 day incidence per 100,000 inhabitants": "rgba(0,0,255,0
                       "7 day deaths (by cases (mean of ±3 days)) per 1,000,000 inhabitants": "rgb(255,0,0)"}
 title = 7 day incidence
 xaxis_title = Date
-yaxis_title = value
+yaxis_title = Value
 yaxis_tickformat = ,.2f
 
 
@@ -152,8 +152,8 @@ y = ["positive tested",
 color_discrete_map = {"positive tested": "rgb(255,0,0)",
                       "negative tested": "rgb(0,0,255)"}
 title = Number of PCR-Tests
-xaxis_title = calendar week
-yaxis_title = number of tests
+xaxis_title = Calendar week
+yaxis_title = Number of tests
 barmode = stack
 yaxis_tickformat = ,f
 
@@ -161,7 +161,7 @@ yaxis_tickformat = ,f
 [SUBFIG_PCR_TESTS_POSITIVE_RATE]
 y = ["positive rate (%)"]
 color_discrete_map = {"positive rate (%)": "rgb(255,0,0)"}
-yaxis_title = positive rate (%)
+yaxis_title = Positive rate (%)
 yaxis_tickformat = .2f
 
 
@@ -174,8 +174,8 @@ color_discrete_map = {"deceased in %": "red",
                       "hospitalized in %": "orange",
                       "no symptoms or no symptoms significant for COVID-19 in %": "green"}
 title = Proportion in relation to reported cases
-xaxis_title = calendar week
-yaxis_title = percentage
+xaxis_title = Calendar week
+yaxis_title = Percentage
 yaxis_tickformat = .2f
 
 
@@ -183,16 +183,16 @@ yaxis_tickformat = .2f
 x = age group
 y = ["inhabitants"]
 color_discrete_map = {"inhabitants": "rgb(0,204,0)"}
-title = Distribution of inhabitants and reported deaths<br>(***note: different scales for inhabitants and deaths***)
-xaxis_title = age group
-yaxis_title = number of people
+title = Distribution of inhabitants and reported deaths<br>(note: different scales for inhabitants and deaths)
+xaxis_title = Age group
+yaxis_title = Number of people
 yaxis_tickformat = ,f
 
 
 [SUBFIG_DISTRIBUTION_OF_DEATHS]
 y = ["total reported deaths"]
 color_discrete_map = {"total reported deaths": "rgb(255,0,0)"}
-yaxis_title = number of reported deaths
+yaxis_title = Number of reported deaths
 barmode = group
 yaxis_tickformat = ,f
 
@@ -201,16 +201,16 @@ yaxis_tickformat = ,f
 x = age group
 y = ["total reported cases per 100,000 inhabitants"]
 color_discrete_map = {"total reported cases per 100,000 inhabitants": "rgb(0,0,255)"}
-title = Distribution of reported cases and deaths in relation to inhabitants<br>(***note: different scales for cases and deaths***)
-xaxis_title = age group
-yaxis_title = number of reported cases
+title = Distribution of reported cases and deaths in relation to inhabitants<br>(note: different scales for cases and deaths)
+xaxis_title = Age group
+yaxis_title = Number of reported cases
 yaxis_tickformat = ,.2f
 
 
 [SUBFIG_DISTRIBUTION_OF_DEATHS_PER_N_INHABITANTS]
 y = ["total reported deaths per 1,000,000 inhabitants"]
 color_discrete_map = {"total reported deaths per 1,000,000 inhabitants": "rgb(255,0,0)"}
-yaxis_title = number of reported deaths
+yaxis_title = Number of reported deaths
 barmode = group
 yaxis_tickformat = ,.2f
 
@@ -223,8 +223,8 @@ x = date
 y = ["number of reporting areas"]
 color_discrete_map = {"number of reporting areas": "rgb(0,0,255)"}
 title = Number of reporting areas
-xaxis_title = date
-yaxis_title = value
+xaxis_title = Date
+yaxis_title = Value
 yaxis_tickformat = ,f
 
 
@@ -235,8 +235,8 @@ y = ["newly admitted intensive care patients with a positive COVID-19 test",
 color_discrete_map = {"newly admitted intensive care patients with a positive COVID-19 test": "rgba(0,0,255,0.15)",
                       "newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)": "rgb(0,0,255)"}
 title = New admissions of COVID-19 patients to intensive care unit since the day before
-xaxis_title = date
-yaxis_title = cases
+xaxis_title = Date
+yaxis_title = Cases
 yaxis_tickformat = ,f
 
 
@@ -247,8 +247,8 @@ y = ["intensive care patients with positive COVID-19 test (change from previous 
 color_discrete_map = {"intensive care patients with positive COVID-19 test (change from previous day)": "rgba(0,0,255,0.15)",
                       "intensive care patients with positive COVID-19 test (change from previous day, mean ±3 days)": "rgb(0,0,255)"}
 title = Change from previous day of intensiv care beds occupied by COVID-19 patients
-xaxis_title = date
-yaxis_title = cases
+xaxis_title = Date
+yaxis_title = Cases
 yaxis_tickformat = ,f
 
 
@@ -259,15 +259,15 @@ y = ["invasively ventilated",
 color_discrete_map = {"not invasively ventilated": "rgb(0,0,255)",
                       "invasively ventilated": "rgb(255,153,0)"}
 title = Proportion of COVID-19 patients receiving intensive care and ventilation
-xaxis_title = date
-yaxis_title = cases
+xaxis_title = Date
+yaxis_title = Cases
 yaxis_tickformat = ,f
 
 
 [SUBFIG_INTENSIVE_CARE_VENTILATED_PERCENTAGE]
 y = ["invasively ventilated (%)"]
 color_discrete_map = {"invasively ventilated (%)": "rgb(255,0,0)"}
-yaxis_title = ventilated in %
+yaxis_title = Ventilated in %
 barmode = stack
 yaxis_tickformat = .2f
 
@@ -283,8 +283,8 @@ color_discrete_map = {"COVID-19 cases": "rgba(178,45,0,0.5)",
                       "free intensive care beds": "rgba(0,153,51,0.25)",
                       "emergency reserve": "rgb(255,153,0)"}
 title = Intensive care beds occupied with and without COVID-19 patients
-xaxis_title = date
-yaxis_title = cases
+xaxis_title = Date
+yaxis_title = Cases
 yaxis_tickformat = ,f
 
 
@@ -312,8 +312,8 @@ color_discrete_map = {"Proportion of patients with positive COVID-19 test in occ
                      "Proportion of occupied intensive care beds incl. emergency reserve (%)": "yellow",
                      "Proportion of occupied intensive care beds (%)": "black"}
 title = Intensiv care beds proportional
-xaxis_title = date
-yaxis_title = percent
+xaxis_title = Date
+yaxis_title = Percent
 yaxis = {"range": [0, 100]}
 yaxis_tickformat = .2f
 
@@ -324,7 +324,7 @@ yaxis_tickformat = .2f
 [SUBFIG_DISTRIBUTION_OF_CASES]
 y = ["total reported cases"]
 color_discrete_map = {"total reported cases": "rgb(0,0,255)"}
-yaxis_title = number of reported cases
+yaxis_title = Number of reported cases
 barmode = group
 yaxis_tickformat = ,f
 
