--- a/graph_definitions.ini
+++ b/graph_definitions.ini
@@ -72,7 +72,7 @@ y = ["cases with reported start of illness",
      "cases with unknown start of illness (reporting date)"]
 color_discrete_map = {"cases with reported start of illness": "rgb(0,0,153)",
                       "cases with unknown start of illness (reporting date)": "rgb(79,148,205)"}
-title = Total reported cases per reference date (start of illness, alternatively reporting date)
+title = Total reported cases per reference date (start of illness, alternatively reporting date)<br>(note: numbers for cases by reference date may still rise in the final days)
 xaxis_title = Reference date (start of illness, alternatively reporting date)
 yaxis_title = Reported cases
 barmode = stack
@@ -85,7 +85,7 @@ y = ["deaths (mean of ±3 days)",
 	 "deaths"]
 color_discrete_map = {"deaths (mean of ±3 days)": "rgb(255,0,0)",
                       "deaths": "rgba(255,0,0,0.15)"}
-title = Corona deaths<br>(note: numbers for deaths by reference date may still rise sharply in the final weeks, as the outcome is not yet clear*)
+title = Corona deaths<br>(note: numbers for deaths by reference date may still rise sharply in the final weeks, as the outcome is not yet clear)
 xaxis_title = Date
 yaxis_title = Number of deaths
 yaxis_tickformat = ,f
@@ -105,7 +105,7 @@ y = ["deaths with reported start of illness",
      "deaths with unknown start of illness (reporting date)"]
 color_discrete_map = {"deaths with reported start of illness": "rgb(255,0,0)",
                       "deaths with unknown start of illness (reporting date)": "rgb(255,153,0)"}
-title = Total reported cases per reference date (start of illness, alternatively reporting date)<br>(note: numbers for deaths by reference date may still rise sharply in the final weeks, as the outcome is not yet clear***
+title = Total reported cases per reference date (start of illness, alternatively reporting date)<br>(note: numbers for deaths by reference date may still rise sharply in the final weeks, as the outcome is not yet clear)
 xaxis_title = Reference date (start of illness, alternatively reporting date)
 yaxis_title = Reported cases
 barmode = stack
@@ -173,7 +173,7 @@ y = ["deceased in %",
 color_discrete_map = {"deceased in %": "red",
                       "hospitalized in %": "orange",
                       "no symptoms or no symptoms significant for COVID-19 in %": "green"}
-title = Proportion in relation to reported cases
+title = Proportion in relation to reported cases<br>(note: figures may still rise sharply in the final weeks, as the outcome is not yet clear, especially for deceseased in %)
 xaxis_title = Calendar week
 yaxis_title = Percentage
 yaxis_tickformat = .2f
