Adapt headline for proportion graph

--- a/graph_definitions.ini
+++ b/graph_definitions.ini
@@ -173,7 +173,7 @@ y = ["deceased in %",
 color_discrete_map = {"deceased in %": "red",
                       "hospitalized in %": "orange",
                       "no symptoms or no symptoms significant for COVID-19 in %": "green"}
-title = Proportion in relation to reported cases<br>(note: figures may still rise sharply in the final weeks, as the outcome is not yet clear, especially for deceseased in %)
+title = Reported cases by health status<br>(note: figures may still rise sharply in the final weeks, as the outcome is not yet clear, especially for deceseased in %)
 xaxis_title = Calendar week
 yaxis_title = Percentage
 yaxis_tickformat = .2f
