Adapt graph colors to um color palett

--- a/graph_definitions.ini
+++ b/graph_definitions.ini
@@ -30,7 +30,7 @@ yaxis_tickformat = ,f
 [FIG_NEW_CASES_BY_REPORTING_DATE]
 x = date
 y = ["new reported cases by reporting date"]
-color_discrete_map = {"new reported cases by reporting date": "rgb(0,0,255)"}
+color_discrete_map = {"new reported cases by reporting date": "rgb(0,121,164)"}
 title = Delay in reporting between public health departments and the RKI
 xaxis_title = Reporting date
 yaxis_title = New reported cases
@@ -45,8 +45,8 @@ yaxis_tickformat = ,f
 x = date
 y = ["cases",
      "cases (mean of ±3 days)"]
-color_discrete_map = {"cases (mean of ±3 days)": "rgb(0,0,255)",
-                      "cases": "rgba(0,0,255,0.15)"}
+color_discrete_map = {"cases (mean of ±3 days)": "rgb(0,121,164)",
+                      "cases": "rgba(0,121,164,0.15)"}
 labels = {"dateRep": "reporting date"}
 title = New Corona cases
 xaxis_title = Date
@@ -60,8 +60,8 @@ y = ["cases (Nowcast RKI)",
      "cases (mean of ±3 days of Nowcast RKI)",
      "Infections (based on 7 day nowcast of RKI - 5 days regarding incubation period)",
      "Infections (mean of ±3 days based on 7 day nowcast of RKI - 5 days regarding incubation period)"]
-color_discrete_map = {"cases (Nowcast RKI)": "rgba(0,204,0,0.3)",
-                      "cases (mean of ±3 days of Nowcast RKI)": "rgb(0,204,0)",
+color_discrete_map = {"cases (Nowcast RKI)": "rgba(117,214,193,0.3)",
+                      "cases (mean of ±3 days of Nowcast RKI)": "rgb(117,214,193)",
                       "Infections (based on 7 day nowcast of RKI - 5 days regarding incubation period)": "rgba(255,165,0,0.3)",
                       "Infections (mean of ±3 days based on 7 day nowcast of RKI - 5 days regarding incubation period)": "rgb(255,165,0)"}
 
@@ -95,8 +95,8 @@ hover_data = RKI reporting date
 [FIG_DEATHS_MEAN_3_SUBFIG]
 y = ["deaths (mean of ±3 days) by reference date (start of illness, alternatively reporting date)",
      "deaths by reference date (start of illness, alternatively reporting date)"]
-color_discrete_map = {"deaths (mean of ±3 days) by reference date (start of illness, alternatively reporting date)": "rgb(0,204,0)",
-                      "deaths by reference date (start of illness, alternatively reporting date)": "rgba(0,204,0,0.3)"}
+color_discrete_map = {"deaths (mean of ±3 days) by reference date (start of illness, alternatively reporting date)": "rgb(117,214,193)",
+                      "deaths by reference date (start of illness, alternatively reporting date)": "rgba(117,214,193,0.3)"}
 
 
 [FIG_TOTAL_DEATHS_PER_REFDATE]
@@ -118,9 +118,9 @@ y = ["R value by cases (mean of ±3 days)",
      "7 day R value (Nowcast RKI)",
      "7 day R value (Nowcast RKI, -5 days incubation period)",
      "daily proportionate increase of cases (mean of ±3 days)"]
-color_discrete_map = {"R value by cases (mean of ±3 days)": "rgb(0,0,255)",
-                      "daily proportionate increase of cases (mean of ±3 days)": "rgba(0,0,255,0.15)",
-                      "7 day R value (Nowcast RKI)": "rgb(0,204,0)",
+color_discrete_map = {"R value by cases (mean of ±3 days)": "rgb(0,121,164)",
+                      "daily proportionate increase of cases (mean of ±3 days)": "rgba(0,121,164,0.15)",
+                      "7 day R value (Nowcast RKI)": "rgb(117,214,193)",
                       "7 day R value (Nowcast RKI, -5 days incubation period)": "rgb(255,165,0)"}
 title = R value and daily proportional change
 xaxis_title = Date
@@ -135,8 +135,8 @@ y = ["7 day incidence per 100,000 inhabitants",
      "7 day incidence (by cases (mean of ±3 days)) per 100,000 inhabitants",
      "7 day deaths per 1,000,000 inhabitants",
      "7 day deaths (by cases (mean of ±3 days)) per 1,000,000 inhabitants"]
-color_discrete_map = {"7 day incidence per 100,000 inhabitants": "rgba(0,0,255,0.15)",
-                      "7 day incidence (by cases (mean of ±3 days)) per 100,000 inhabitants": "rgb(0,0,255)",
+color_discrete_map = {"7 day incidence per 100,000 inhabitants": "rgba(0,121,164,0.15)",
+                      "7 day incidence (by cases (mean of ±3 days)) per 100,000 inhabitants": "rgb(0,121,164)",
                       "7 day deaths per 1,000,000 inhabitants": "rgba(255,0,0,0.15)",
                       "7 day deaths (by cases (mean of ±3 days)) per 1,000,000 inhabitants": "rgb(255,0,0)"}
 title = 7 day incidence
@@ -150,7 +150,7 @@ x = calendar week
 y = ["positive tested",
 	 "negative tested"]
 color_discrete_map = {"positive tested": "rgb(255,0,0)",
-                      "negative tested": "rgb(0,0,255)"}
+                      "negative tested": "rgb(0,121,164)"}
 title = Number of PCR-Tests
 xaxis_title = Calendar week
 yaxis_title = Number of tests
@@ -172,7 +172,7 @@ y = ["deceased in %",
 	 "no symptoms or no symptoms significant for COVID-19 in %"]
 color_discrete_map = {"deceased in %": "red",
                       "hospitalized in %": "orange",
-                      "no symptoms or no symptoms significant for COVID-19 in %": "green"}
+                      "no symptoms or no symptoms significant for COVID-19 in %": "rgb(0,129,0)"}
 title = Reported cases by health status<br>(note: figures may still rise sharply in the final weeks, as the outcome is not yet clear, especially for deceseased in %)
 xaxis_title = Calendar week
 yaxis_title = Percentage
@@ -182,7 +182,7 @@ yaxis_tickformat = .2f
 [FIG_DISTRIBUTION_OF_INHABITANTS]
 x = age group
 y = ["inhabitants"]
-color_discrete_map = {"inhabitants": "rgb(0,204,0)"}
+color_discrete_map = {"inhabitants": "rgb(0,121,164)"}
 title = Distribution of inhabitants and reported deaths<br>(note: different scales for inhabitants and deaths)
 xaxis_title = Age group
 yaxis_title = Number of people
@@ -200,7 +200,7 @@ yaxis_tickformat = ,f
 [FIG_DISTRIBUTION_OF_CASES_PER_N_INHABITANTS]
 x = age group
 y = ["total reported cases per 100,000 inhabitants"]
-color_discrete_map = {"total reported cases per 100,000 inhabitants": "rgb(0,0,255)"}
+color_discrete_map = {"total reported cases per 100,000 inhabitants": "rgb(0,121,164)"}
 title = Distribution of reported cases and deaths in relation to inhabitants<br>(note: different scales for cases and deaths)
 xaxis_title = Age group
 yaxis_title = Number of reported cases
@@ -221,7 +221,7 @@ yaxis_tickformat = ,.2f
 [FIG_INTENSIVE_REPORTING_AREAS]
 x = date
 y = ["number of reporting areas"]
-color_discrete_map = {"number of reporting areas": "rgb(0,0,255)"}
+color_discrete_map = {"number of reporting areas": "rgb(0,121,164)"}
 title = Number of reporting areas
 xaxis_title = Date
 yaxis_title = Value
@@ -232,8 +232,8 @@ yaxis_tickformat = ,f
 x = date
 y = ["newly admitted intensive care patients with a positive COVID-19 test",
      "newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)"]
-color_discrete_map = {"newly admitted intensive care patients with a positive COVID-19 test": "rgba(0,0,255,0.15)",
-                      "newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)": "rgb(0,0,255)"}
+color_discrete_map = {"newly admitted intensive care patients with a positive COVID-19 test": "rgba(0,121,164,0.15)",
+                      "newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)": "rgb(0,121,164)"}
 title = New admissions of COVID-19 patients to intensive care unit since the day before
 xaxis_title = Date
 yaxis_title = Cases
@@ -244,8 +244,8 @@ yaxis_tickformat = ,f
 x = date
 y = ["intensive care patients with positive COVID-19 test (change from previous day)",
      "intensive care patients with positive COVID-19 test (change from previous day, mean ±3 days)"]
-color_discrete_map = {"intensive care patients with positive COVID-19 test (change from previous day)": "rgba(0,0,255,0.15)",
-                      "intensive care patients with positive COVID-19 test (change from previous day, mean ±3 days)": "rgb(0,0,255)"}
+color_discrete_map = {"intensive care patients with positive COVID-19 test (change from previous day)": "rgba(0,121,164,0.15)",
+                      "intensive care patients with positive COVID-19 test (change from previous day, mean ±3 days)": "rgb(0,121,164)"}
 title = Change from previous day of intensiv care beds occupied by COVID-19 patients
 xaxis_title = Date
 yaxis_title = Cases
@@ -256,7 +256,7 @@ yaxis_tickformat = ,f
 x = date
 y = ["invasively ventilated",
 	 "not invasively ventilated"]
-color_discrete_map = {"not invasively ventilated": "rgb(0,0,255)",
+color_discrete_map = {"not invasively ventilated": "rgb(0,121,164)",
                       "invasively ventilated": "rgb(255,153,0)"}
 title = Proportion of COVID-19 patients receiving intensive care and ventilation
 xaxis_title = Date
@@ -278,9 +278,9 @@ y = ["COVID-19 cases",
 	 "intensive care patients without positive COVID-19 test",
 	 "free intensive care beds",
 	 "emergency reserve"]
-color_discrete_map = {"COVID-19 cases": "rgba(178,45,0,0.5)",
-                      "intensive care patients without positive COVID-19 test": "rgba(0,0,153,0.5)",
-                      "free intensive care beds": "rgba(0,153,51,0.25)",
+color_discrete_map = {"COVID-19 cases": "rgb(255,0,0)",
+                      "intensive care patients without positive COVID-19 test": "rgba(0,121,164,0.5)",
+                      "free intensive care beds": "rgba(0,129,0,0.5)",
                       "emergency reserve": "rgb(255,153,0)"}
 title = Intensive care beds occupied with and without COVID-19 patients
 xaxis_title = Date
@@ -292,9 +292,9 @@ yaxis_tickformat = ,f
 y = ["number of intensive care beds incl. emergency reserve",
      "number of intensive care beds",
      "number of occupied intensive care beds (mean ±3 days)"]
-color_discrete_map = {"number of intensive care beds": "rgba(0,153,51,0.5)",
+color_discrete_map = {"number of intensive care beds": "rgb(0,129,0)",
                       "number of intensive care beds incl. emergency reserve": "rgb(255,153,0)",
-                      "number of occupied intensive care beds (mean ±3 days)": "rgba(0,0,153,0.5)"}
+                      "number of occupied intensive care beds (mean ±3 days)": "rgb(0,121,164)"}
 barmode = stack
 yaxis_tickformat = ,f
 
@@ -306,11 +306,11 @@ y = ["Proportion of patients with positive COVID-19 test in occupied intensive c
      "Proportion of patients with positive COVID-19 test in available intensive care beds incl. emergency reserve (%)",
      "Proportion of occupied intensive care beds incl. emergency reserve (%)",
      "Proportion of occupied intensive care beds (%)"]
-color_discrete_map = {"Proportion of patients with positive COVID-19 test in occupied intensive care beds (%)": "red",
-                     "Proportion of patients with positive COVID-19 test in available intensive care beds without emergency reserve (%)": "green",
+color_discrete_map = {"Proportion of patients with positive COVID-19 test in occupied intensive care beds (%)": "rgb(216,89,90)",
+                     "Proportion of patients with positive COVID-19 test in available intensive care beds without emergency reserve (%)": "rgb(0,129,0)",
                      "Proportion of patients with positive COVID-19 test in available intensive care beds incl. emergency reserve (%)": "orange",
-                     "Proportion of occupied intensive care beds incl. emergency reserve (%)": "yellow",
-                     "Proportion of occupied intensive care beds (%)": "black"}
+                     "Proportion of occupied intensive care beds incl. emergency reserve (%)": "rgb(117,214,193)",
+                     "Proportion of occupied intensive care beds (%)": "rgb(0,121,164)"}
 title = Intensiv care beds proportional
 xaxis_title = Date
 yaxis_title = Percent
@@ -323,7 +323,7 @@ yaxis_tickformat = .2f
 
 [SUBFIG_DISTRIBUTION_OF_CASES]
 y = ["total reported cases"]
-color_discrete_map = {"total reported cases": "rgb(0,0,255)"}
+color_discrete_map = {"total reported cases": "rgb(0,121,164)"}
 yaxis_title = Number of reported cases
 barmode = group
 yaxis_tickformat = ,f
