change title for clinical aspects

--- a/graph_definitions.ini
+++ b/graph_definitions.ini
@@ -173,7 +173,7 @@ y = ["deceased in %",
 color_discrete_map = {"deceased in %": "red",
                       "hospitalized in %": "orange",
                       "no symptoms or no symptoms significant for COVID-19 in %": "rgb(0,129,0)"}
-title = Reported cases by health status<br>(note: figures may still rise sharply in the final weeks, as the outcome is not yet clear, especially for deceseased in %)
+title = Clinical Aspects<br>(note: figures may still rise sharply in the final weeks, as the outcome is not yet clear, especially for deceseased in %)
 xaxis_title = Calendar week
 yaxis_title = Percentage
 yaxis_tickformat = .2f
@@ -182,7 +182,7 @@ yaxis_tickformat = .2f
 [FIG_DISTRIBUTION_OF_INHABITANTS]
 x = age group
 y = ["inhabitants"]
-color_discrete_map = {"inhabitants": "rgb(0,121,164)"}
+color_discrete_map = {"inhabitants": "rgb(154,193,220)"}
 title = Distribution of inhabitants and reported deaths<br>(note: different scales for inhabitants and deaths)
 xaxis_title = Age group
 yaxis_title = Number of people
