include python3-distutils

--- a/docker/update_data/Dockerfile
+++ b/docker/update_data/Dockerfile
@@ -6,7 +6,7 @@ COPY . /app
 WORKDIR /app
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
-      python3 python3-pip \
+      python3 python3-pip python3-distutils\
       openjdk-11-jdk \
       poppler-utils libpoppler-dev libpoppler-cpp-dev build-essential pkg-config python-dev && \
     pip3 install pipenv && \
