integrate cumulative data to mouse hover

--- a/graph_definitions.ini
+++ b/graph_definitions.ini
@@ -52,7 +52,10 @@ title = New Corona cases
 xaxis_title = Date
 yaxis_title = Number of cases
 yaxis_tickformat = ,f
-hover_data = RKI reporting date
+hover_data = ["cases cumulative", "RKI reporting date"]
+hover_data_strftime = RKI reporting date
+hover_data_format_column = cases cumulative
+hover_data_format = ,.0f
 
 
 [FIG_CASES_MEAN_3_SUBFIG]
@@ -89,7 +92,10 @@ title = Corona deaths<br>(note: numbers for deaths by reference date may still r
 xaxis_title = Date
 yaxis_title = Number of deaths
 yaxis_tickformat = ,f
-hover_data = RKI reporting date
+hover_data = ["deaths cumulative", "RKI reporting date"]
+hover_data_strftime = RKI reporting date
+hover_data_format_column = deaths cumulative
+hover_data_format = ,.0f
 
 
 [FIG_DEATHS_MEAN_3_SUBFIG]
